--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
 
     <!-- CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- JQuery library -->
