--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
 <body>
 
     <div id="container">
-
-        <div id="game">
-
+        <div class="row">
+            <div class="col-md-12">
+                <div id="game-start"></div>
+            </div>
         </div>
-
+        <div class="row">
+            <div class="col-md-12">
+                <div id="game"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="results"></div>
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
