--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- JQuery library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <title>Totally Trivial Trivia!</title>
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+
+    <title>Rap Trivia</title>
 </head>
 
 <body>
