--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 
+    <link rel="icon" type="image/jpg" href="assets/images/musicnote-favicon.png">
+
     <title>Rap Trivia</title>
 </head>
 
